Some style changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
           <!-- HEADER -->
           <tr>
-            <td class="row-blue">
+            <td class="row-green">
               <table id="table-internal">
                 <tbody>
                   <tr>
