--- a/submit.html
+++ b/submit.html
@@ -4,7 +4,7 @@
     <link href="./css/news.css" rel="stylesheet">
     <link href="./css/stamplay.css" rel="stylesheet">
 
-    <title>STAMPLAY News</title>
+    <title>Data News</title>
   </head>
 
   <body>
@@ -94,11 +94,7 @@
                 <span class="yclinks">                
                   <a href="?newest=true" class="newest">Newest</a>                
                   |
-                  <a href="/contact.html">Contact</a>
-                  |
-                   <a href="https://github.com/Stamplay/stamplay-hackernews" target="_blank">Fork me on Github</a>
-                  |
-                  <a href="https://stamplay.com" target="_blank">Stamplay</a>                
+                  <a href="/contact.html">Contact</a>      
                 </span>
                 <br>
                 <br>
