--- a/item.html
+++ b/item.html
@@ -78,8 +78,6 @@
                   <a href="?newest=true" class="newest">Newest</a>                
                   |
                   <a href="/contact.html">Contact</a>
-                  |
-                  <a href="https://stamplay.com" target="_blank">Stamplay</a>                
                 </span>
                 <br>
                 <br>
@@ -103,6 +101,18 @@
   
   <script src="./js/utils.js"></script>
   <script src="./js/main.js"></script>
+  <!-- GA -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-72083136-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
+  <!-- /GA -->
   </body>
 
 </html>
