Styling, faviconing, GA-ing

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="shortcut icon" href="./images/favicon32.png">
+    <link rel="shortcut icon" href="./images/favicon.png">
     <link href="./css/news.css" rel="stylesheet">
     <link href="./css/stamplay.css" rel="stylesheet">
 
@@ -20,7 +20,7 @@
                   <tr>
                     <td class="logo-container">
                       <a href="http://datanews.io">
-                        <img src="./images/img2.png" class="logo-img">
+                        <img src="./images/favicon.png" class="logo-img">
                       </a>
                     </td>
                     <td style="line-height:12pt; height:10px;">
