--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
 }
 </style>
 </head>
-<body bgcolor="#ffffff" alink="#0000be"> <b>Login</b>
+<body bgcolor="#ffffff" alink="#0000be" style="text-align:center;"> <b>Login</b>
 	<br>
 	<br>
 	<form id="loginform" method="post" action="login">
