--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 	                <tr>
 	                  <td style="width:18px;padding-right:4px">
 	                    <a href="/">
-	                      <img src="./images/img2.png" width="18" height="18" style="border:1px #ffffff solid;">
+	                      <img src="./images/favicon.png" width="18" height="18" style="border:1px #ffffff solid;">
 	                    </a>
 	                  </td>
 	                  <td style="line-height:12pt; height:10px;">
