--- a/search.html
+++ b/search.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="shortcut icon" href="./images/favicon32.png">
+    <link rel="shortcut icon" href="./images/favicon.png">
     <link href="./css/news.css" rel="stylesheet">
     <link href="./css/stamplay.css" rel="stylesheet">
 
@@ -19,8 +19,8 @@
                 <tbody>
                   <tr>
                     <td class="logo-container">
-                      <a href="https://stamplay.com">
-                        <img src="./images/img2.png" class="logo-img">
+                      <a href="http://datanews.io">
+                        <img src="./images/favicon.png" class="logo-img">
                       </a>
                     </td>
                     <td style="line-height:12pt; height:10px;">
@@ -91,6 +91,18 @@
   
   <script src="./js/utils.js"></script>
   <script src="./js/main.js"></script>
+  <!-- GA -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-72083136-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
+  <!-- /GA -->
 
   </body>
 
