--- a/submit.html
+++ b/submit.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="shortcut icon" href="./images/img2.png">
+    <link rel="shortcut icon" href="./images/favicon.png">
     <link href="./css/news.css" rel="stylesheet">
     <link href="./css/stamplay.css" rel="stylesheet">
 
@@ -18,7 +18,7 @@
 					                <tr>
 					                  <td style="width:18px;padding-right:4px">
 					                    <a href="/">
-					                      <img src="./images/img2.png" width="18" height="18" style="border:1px #ffffff solid;"></a>
+					                      <img src="./images/favicon.png" width="18" height="18" style="border:1px #ffffff solid;"></a>
 					                  </td>
 					                  <td style="line-height:12pt; height:10px;">
 					                    <span class="pagetop" style="color:#fff"> <b>Submit</b>
@@ -118,7 +118,7 @@
   
 	<script src="./js/utils.js"></script>
   <script src="./js/main.js"></script>
-  
+
   <!-- GA -->
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
