--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
           </tr>
       </tbody>
     </table>
+    <hr>
+    <div>
+      <div class="fb-like" data-href="http://facebook.com/datanewsio" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+      <a href="https://twitter.com/datanewsio" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @datanewsio</a>
+    </div>
   </center>
 
   <script src="/bower_components/jquery/dist/jquery.min.js"></script>
@@ -120,6 +125,23 @@
     });
   </script -->
   
+  <!-- FB like button -->
+  <div id="fb-root"></div>
+  <script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5&appId=188554417917880";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));
+  </script>
+  <!-- /FB like button -->
+
+  <!-- Twitter follow button -->
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+  </script>
+  <!-- /Twitter follow button -->
+
   <!-- GA -->
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
