Provide unique usernames.

--- a/login.html
+++ b/login.html
@@ -31,6 +31,11 @@ layout: default
   <table border="0">
     <tbody>
       <tr>
+        <td>username:</td>
+        <td>
+          <input type="text" name="username" size="20" id="username" autocorrect="off" autocapitalize="off"></td>
+      </tr>
+      <tr>
         <td>email:</td>
         <td>
           <input type="text" name="acct" size="20" autocorrect="off" autocapitalize="off"></td>
